Preparations for releasing (#26)